--- a/libai.html
+++ b/libai.html
@@ -2,7 +2,7 @@
 <h1> 李白</h1>
 （701年2月28日—762年12月)<br>
 字太白，号青莲居士 ，出生于<a href="https://baike.baidu.com/item/%E6%98%8C%E9%9A%86%E5%8E%BF/10671610"target="_blank">蜀郡绵州昌隆县</a>（今四川省绵阳市江油市青莲镇 ），一说山东人， 一说出生于西域碎叶 ，祖籍陇西成纪（今甘肃省秦安县），<a href="https://baike.baidu.com/item/%E6%9D%8E%E6%9A%A0/18438"target="_blank">凉武昭王李暠九世孙</a><br>
-<img src="file:///C:/Users/cxch/Desktop/R-C.jpg">
+<img src="http://image.yjcf360.com/u/cms/www/202103/13101450gi05.jpg">
 <h3>一.诗</h3>
 
 风格：豪迈奔放，清新飘逸，想象丰富，意境奇妙，语言奇妙，浪漫主义，立意清晰<br>
@@ -89,7 +89,7 @@
 <h5>40.《山中与幽人对酌》</h5>
 两人对酌山花开，一杯一杯复一杯。我醉欲眠卿且去，明朝有意抱琴来。<br>
 <h3>二.书法</h3>
-<a href="https://baike.baidu.com/item/%E4%B8%8A%E9%98%B3%E5%8F%B0%E5%B8%96/2022339"target="_blank">《上阳台帖》</a>为李白书自咏四言行草诗，也是其唯一传世的书法真迹。纸本，纵28.5厘米，横38.1厘米。草书5行，共25字。款署“太白”二字。引首清高宗弘历楷书题“青莲逸翰”四字，正文右上宋徽宗赵佶瘦金书题签：“唐李太白上阳台”七字。背有宋徽宗赵佶，元张晏、杜本、欧阳玄、王馀庆、危素、驺鲁，清乾隆皇帝题跋和观款。卷前后钤有宋赵孟坚“子固”“彜斋”、贾似道“秋壑图书”，元“张晏私印”“欧阳玄印”以及明项元汴，清梁清标、安岐、清内府，近代张伯驹等鉴藏印。<img src="file:///C:/Users/cxch/Desktop/0b55b319ebc4b74543a908e595ac09178a82b801bfba.webp">
+<a href="https://baike.baidu.com/item/%E4%B8%8A%E9%98%B3%E5%8F%B0%E5%B8%96/2022339"target="_blank">《上阳台帖》</a>为李白书自咏四言行草诗，也是其唯一传世的书法真迹。纸本，纵28.5厘米，横38.1厘米。草书5行，共25字。款署“太白”二字。引首清高宗弘历楷书题“青莲逸翰”四字，正文右上宋徽宗赵佶瘦金书题签：“唐李太白上阳台”七字。背有宋徽宗赵佶，元张晏、杜本、欧阳玄、王馀庆、危素、驺鲁，清乾隆皇帝题跋和观款。卷前后钤有宋赵孟坚“子固”“彜斋”、贾似道“秋壑图书”，元“张晏私印”“欧阳玄印”以及明项元汴，清梁清标、安岐、清内府，近代张伯驹等鉴藏印。<img src="https://static.guwantj.com/public/uploads/preview/-11618033476xo8wxeycga.png">
 <h3>三.思想</h3>
 盛唐国力强盛，多数士人渴望建功立业。李白以不世之才自居，以“奋其智能，愿为辅弼，使寰区大定，海县清一”的功业自许，一生矢志不渝地追求实现“谈笑安黎元”、“终与安社稷”的理想。他以大鹏、天马、雄剑自比：“大鹏一日同风起，扶摇直上九万里。假令风歇时下来，犹能簸却沧溟水。”（《上李邕》）。他希望能像姜尚辅佐明君，像诸葛亮兴复汉室。《梁甫吟》《读诸葛武侯传抒怀》《永王东巡歌》《行路难》（其二）都反映了他的这类思想。当时有名的纵横家赵蕤是李白的老师，此人于开元四年（716年）就著成了《长短经》十卷。那时李白才十五岁。赵蕤这部博考六经异同、分析天下形势、讲求兴亡治乱之道的纵横家式的著作引起了李白极大的兴趣。他以后一心要建功立业，喜谈王霸之道，也正是受到这部书的影响。<br>
 李白觉得凭借自己的才能，可以“出则以平交王侯，遁则以俯视巢许”（《送烟子元演隐仙城山序》），对于那些靠着门第荫封而享高官厚禄的权豪势要，他投以强烈的鄙视，表现出傲岸不屈的性格。他蔑视封建等级制度，不愿阿谀奉迎，也不屑于与俗沉浮。现实的黑暗使他理想幻灭，封建礼教等级制度的束缚使他窒息，他渴望个性的自由和解放，于是采取狂放不羁的生活态度来挣脱桎梏、争取自由。其表现方式或纵酒狂歌，寻仙学道，然而，酒既无法销愁，神仙更虚无飘渺，于是他“一生好入名山游”（《庐山谣》），把美好的大自然作为理想的寄托、自由的化身来歌颂。他笔下的峨嵋、华山、庐山、泰山、黄山等，巍峨雄奇，吐纳风云，汇泻川流；他笔下的奔腾黄河、滔滔长江，荡涤万物，席卷一切，表现了诗人桀傲不驯的性格和冲决羁绊的强烈愿望。
@@ -216,7 +216,7 @@
 墓地<br>
 <a href=https://baike.baidu.com/item/%E6%9D%8E%E7%99%BD%E5%A2%93/806956""target="_blank">李白墓</a>位于安徽省当涂县太白镇青山西麓的太白行政村谷家自然村西，位置东经118。30‘52”，北纬31。29’35．4”，墓葬海拔12．8米。墓葬附近地貌为江南丘陵，东高西低，东面为当涂县海拔372米的第二高峰青山主峰，李白墓处于青山西麓陇地上，坐北朝南。2006年05月25日，李白墓作为唐代古墓葬，被国务院批准列入第六批全国重点文物保护单位名单。<br>
 纪念馆<br>
-<a href="https://baike.baidu.com/item/%E6%9D%8E%E7%99%BD%E7%BA%AA%E5%BF%B5%E9%A6%86/5490284"target="_blank">江油李白纪念馆</a>:江油市李白纪念馆是为了纪念唐代伟大诗人李白而修建的名人博物馆，位于江油市区风景秀丽的昌明河畔，占地四万余平方米。筹备于1962年，1982年正式开馆。馆内收藏有历代李白诗集版本、历代名家书画精品等文物资料4000余件，其中邓小平、江泽民、胡耀邦、宋庆龄等党和国家领导人的手迹以及仇英、祝枝山、张大千、傅抱石、潘天寿等名家巨擘的作品皆堪称国之瑰宝。2009年被中宣部命名为“全国爱国主义教育示范基地”。“5·12”特大地震重建后的李白纪念馆在保留了园林式唐代建筑风貌基础上，还扩大了陈列体量。重建后的李白纪念馆较之过去，建筑布局更加合理，功能更加完善。主要由纪念展示区、文物保护陈列区、李白文化研究交流区、李白文化普及区和旅游咨询服务区组成。<br><img src=file:///C:/Users/cxch/Desktop/0eb30f2442a7d933074cc72da94bd11372f00183.webp><br>
+<a href="https://baike.baidu.com/item/%E6%9D%8E%E7%99%BD%E7%BA%AA%E5%BF%B5%E9%A6%86/5490284"target="_blank">江油李白纪念馆</a>:江油市李白纪念馆是为了纪念唐代伟大诗人李白而修建的名人博物馆，位于江油市区风景秀丽的昌明河畔，占地四万余平方米。筹备于1962年，1982年正式开馆。馆内收藏有历代李白诗集版本、历代名家书画精品等文物资料4000余件，其中邓小平、江泽民、胡耀邦、宋庆龄等党和国家领导人的手迹以及仇英、祝枝山、张大千、傅抱石、潘天寿等名家巨擘的作品皆堪称国之瑰宝。2009年被中宣部命名为“全国爱国主义教育示范基地”。“5·12”特大地震重建后的李白纪念馆在保留了园林式唐代建筑风貌基础上，还扩大了陈列体量。重建后的李白纪念馆较之过去，建筑布局更加合理，功能更加完善。主要由纪念展示区、文物保护陈列区、李白文化研究交流区、李白文化普及区和旅游咨询服务区组成。<br><img src=https://cn.bing.com/images/search?view=detailV2&mediaurl=https%3A%2F%2Fmedia-cdn.tripadvisor.com%2Fmedia%2Fdaodao%2Fphoto-s%2F12%2F42%2Fd5%2Fe8%2F20180221-154510-largejpg.jpg&expw=550&exph=412&cbid=OLC.KBrQ4qwlbJyF4Q480x360&cbn=local&idpp=local&thid=OLC.KBrQ4qwlbJyF4Q480x360&ypid=YN4067x2858989512514010044&usebfpr=0&eeptype=PhotoGroups&datagroup=local:datagroup.photos&photogroupname=AllPhotos&pagetag=AllPhotos&selectedindex=2&id=OLC.KBrQ4qwlbJyF4Q480x360&q=%E6%B1%9F%E6%B2%B9%E6%9D%8E%E7%99%BD%E7%BA%AA%E5%BF%B5%E9%A6%86&pseg=Attraction&noidpclose=0&form=LOCIMG&ajaxhist=0&ajaxserp=0&vt=0&sim=11><br>
 <a href="https://baike.baidu.com/item/%E6%9D%8E%E7%99%BD%E7%BA%AA%E5%BF%B5%E9%A6%86/5490300"target="_blank">马鞍山李白纪念馆</a>:马鞍山李白纪念馆，位于安徽省马鞍山市采石矶风景名胜区内，成立于1959年。，纪念馆包括太白楼、李白祠、清风亭、太白堂、同风阁、骑鲸轩、仙侣斋、松云居、叠翠楼、吟香馆等展厅和碑廊、沉香园等景点，占地面积1万多平方米。诗歌节从1989年起，马鞍山李白诗歌节连续举办了31届。2019年10月12日，由中国诗歌学会和马鞍山市人民政府共同举办的第31届马鞍山李白诗歌节开幕。<br>
 <a href="https://baike.baidu.com/item/%E5%AE%89%E9%99%86%E6%9D%8E%E7%99%BD%E7%BA%AA%E5%BF%B5%E9%A6%86/1148913"target="_blank">安陆李白纪念馆安陆</a>:李白纪念馆位于国家4A景区的湖北省安陆市白兆山，为三重檐庑殿式仿唐建筑。楼高32.5米，建筑面积6370平方米。馆名“安陆李白纪念馆”七个大字，是启功先生所题写。李白纪念馆展区共四层8000多平米，分为盛世李白、安陆李白、魅力李白三大板块，收录唐代生活用品、李白诗词以及历朝历代抄录李白诗词作品400多件。<br>
 <a href="https://baike.baidu.com/item/%E6%B5%8E%E5%AE%81%E5%B8%82%E6%9D%8E%E7%99%BD%E7%BA%AA%E5%BF%B5%E9%A6%86/53535324"target="_blank">济宁李白纪念馆</a>:济宁李白纪念馆，山东省重点文物保护单位，分上下两层；一层大厅正中有一高约四米、宽一米的李白画像，采用三色仿古锦装裱。
